iterating over eval chapter

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -130,25 +130,25 @@ This final iteration of the Venn diagram still contains ambiguity, however it is
 %=========================================================================================================
 
 \begin{center}
-\begin{longtable}{| l | p{10cm} |}
+\begin{longtable}{ l p{10cm} }
 
-\hline	
+\toprule
 
 \textbf{Term} & \textbf{Definition} \\
 
-\hline
+\midrule
 
 %=========================================================================================================
 		
 Reality & An environment that is entirely unmodelled, with the viewport containing no virtual objects and with no computer-based quantitative information associated with any of the (necessarily real) objects. \\
 		
-\hline
+\midrule
 		
 %=========================================================================================================
 
 Alternate Reality & Any environment in which the environmental stimuli received by a subject have been somehow mediated or modulated. That is, alternate reality is a term that encompasses everything that isn't purely `reality'. \\
 
-\hline
+\midrule
 		
 %=========================================================================================================
 		
@@ -156,13 +156,13 @@ Virtual Reality (VR) & The polar opposite of reality, an environment that consis
 
 While traditional definitions of virtual reality require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (such as by using Head Mounted Displays \& body tracking techniques to remove logical anchors to the real world~\cite{Druck2006}) the criteria adopted herein are less drastic, classifying the virtual environments presented by video games viewed via 2D monitors as rudimentary implementations of virtual reality; they are after all completely modelled environments that exist entirely separate to the real world. \\
 		
-\hline
+\midrule
 		
 %=========================================================================================================
 
 Distributed Virtual Reality (DVR) & Multi-user VR where telecommunications are employed to allow multiple (geographically distributed) users to occupy the same VR environment, allowing cooperation~\cite{Terashima2001}. \\
 
-\hline
+\midrule
 		
 %=========================================================================================================
 
@@ -179,7 +179,7 @@ Augmented Reality (AR) & A mixed reality environment comprising a real environme
 
 %~\cite{Milgram1999}
 
-\hline
+\midrule
 
 %=========================================================================================================
 
@@ -187,20 +187,20 @@ Augmented Virtuality (AV) & A virtual environment upon which sampled real object
 
 %A simple commercial example of augmented virtuality is the EyeToy accessory and associated software for Sony's Playstation 2 games console (and later the Playstation Eye for the Playstation 3), a digital camera that captures images of players and their surroundings and integrates them into the gaming experience presented on the screen.
 
-\hline
+\midrule
 
 %=========================================================================================================
 
 Mediated Reality & \textit{``A general framework for artificial modification of human perception by way of devices for augmenting, deliberately diminishing, and more generally, for otherwise altering sensory input''}~\cite{Mann2002a}. Encompasses all of mixed reality \& modulated reality. \\
 
-\hline
+\midrule
 
 %=========================================================================================================
 
 Modulated Reality & Platforms that aim to modify the user's view, by multiplicative, diminishing, rotational, etc. techniques, where the user's view can be wholly real, or a mix of real \& virtual content. \\
 
-\hline
-
+\bottomrule
+\caption{Summary of alternate reality definitions.}
 \end{longtable}
 \end{center}
 
@@ -477,49 +477,57 @@ In this scenario there is no spatial equivalence between the real environment an
 \section{Summary of Additional Alternate Reality Definitions}
 \label{summaryofadditionalalternaterealitydefinitions}
 
+\begin{table}
 \begin{center}
-\begin{longtable}{| l | p{10cm} |}
+\begin{tabularx}{\textwidth}{l *{2}{>{\centering\arraybackslash}X}}
 
-\hline
+\toprule
 
 \textbf{Term} & \textbf{Definition} \\
 
-\hline
+\midrule
 
 %=========================================================================================================
 		
 HyperReality (HR) & A hypothetical high level term referring to a category of mixed realities that combine VR content with views of the real world in a seamless manner such that the observer experiences \textit{hyperreality}. \\
 		
-\hline
+%\hline
+\midrule
 		
 %=========================================================================================================
 
 hyperreality & A postmodern term describing a situation wherein an observer is unable to distinguish between reality \& a simulation of reality. \\
 
-\hline
+%\hline
+\midrule
 
 %=========================================================================================================
 		
 PolySocial Reality (PoSR) & Describes multiple simultaneous social interactions mediated via various CMC technologies.~\cite{Applin2012}. \\
 
-\hline
+%\hline
+\midrule
 
 %=========================================================================================================
 
 Cross Reality (XR) & Systems that feature two environments, one real \& one virtual, both complete unto themselves~\cite{lifton:merging} but enriched by their ability to mutually reflect, influence \& merge into one another thanks to bidirectional information flow between them~\cite{kim:practical}. \\
 
-\hline
+%\hline
+\midrule
 
 %=========================================================================================================
 
 Parallel Reality (PR) & Systems comprising two environments, one real \& the other virtual, each complete unto itself, wherein the user is granted the ability to transition between receiving stimuli from either. \\
 
-\hline
+%\hline
 
 %=========================================================================================================
-
-\end{longtable}
+\bottomrule
+\end{tabularx}
+%\end{longtable}
 \end{center}
+\caption{Summary of additional alternate reality definitions.}
+\end{table}
 
 %=========================================================================================================
 %=========================================================================================================
