--- a/thesis.tex
+++ b/thesis.tex
@@ -220,10 +220,6 @@
 \includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/interview-questions-stage-1.pdf}
 \label{appendix-interview-questions-stage-1}
 
-\chapter{Igroup Presence Questionnaire (IPQ)}
-\includepdf[pages={1-4}]{06_mirrorshades_studies_results/PDFs/igroup-presence-questionnaire.pdf}
-\label{appendix-igroup-presence-questionnaire}
-
 \chapter{Stage 2.1 12-item Likert-type Questionnaire}
 \includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/12-item-likert-type-questionnaire-stage-2-1.pdf}
 \label{appendix-12-item-likert-type-questionnaire-stage-2-1}
@@ -231,6 +227,18 @@
 \chapter{Stage 2.2 9-item Likert-type Questionnaire}
 \includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/9-item-likert-type-questionnaire-stage-2-2.pdf}
 \label{appendix-9-item-likert-type-questionnaire-stage-2-2}
+
+\chapter{Stage 2.1 Interview Prompts}
+\includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/interview-questions-stage-2-1.pdf}
+\label{appendix-interview-questions-stage-2-1}
+
+\chapter{Stage 2.2 Interview Prompts}
+\includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/interview-questions-stage-2-2.pdf}
+\label{appendix-interview-questions-stage-2-2}
+
+\chapter{Igroup Presence Questionnaire (IPQ)}
+\includepdf[pages={1-4}]{06_mirrorshades_studies_results/PDFs/igroup-presence-questionnaire.pdf}
+\label{appendix-igroup-presence-questionnaire}
 
 \end{appendices}
 
